<resources>
    <string name="app_name">Devnology Teste</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <string name="title_detail">Detail</string>
    <string name="title_checkout">Checkout</string>
</resources>