<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.devnologyteste.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.devnologyteste.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.devnologyteste.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.devnologyteste.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.devnologyteste.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.devnologyteste.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail"
        >
        <argument
            android:name="index"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_checkout"
        android:name="com.example.devnologyteste.ui.checkout.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" />
    <action
        android:id="@+id/action_global_navigation_detail"
        app:destination="@id/navigation_detail"
        />
    <action
        android:id="@+id/action_global_navigation_cart"
        app:destination="@id/navigation_cart"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_global_navigation_checkout"
        app:destination="@id/navigation_checkout" />
</navigation>